ProyectoTEO V3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FOR
    MINUSMINUS
    PLUSPLUS

Grammar

Rule 0     S' -> program
Rule 1     program -> include_directives declaration_l
Rule 2     empty -> <empty>
Rule 3     include_directives -> include_directives include_directive
Rule 4     include_directives -> include_directive
Rule 5     include_directives -> empty
Rule 6     include_directive -> HASH INCLUDE STRING
Rule 7     include_directive -> HASH DEFINE ID simple_expression
Rule 8     declaration_l -> declaration_l declaration
Rule 9     declaration_l -> declaration
Rule 10    declaration -> type var_declaration PUNTOCOMA
Rule 11    declaration -> fun_declaration
Rule 12    var_declaration -> var_declaration COMA var_definition
Rule 13    var_declaration -> var_definition
Rule 14    var_definition -> ID
Rule 15    var_definition -> ID ASSIGN simple_expression
Rule 16    fun_declaration -> type ID LPAREN params RPAREN compound_stmt
Rule 17    fun_declaration -> VOID ID LPAREN params RPAREN compound_stmt
Rule 18    params -> params_l
Rule 19    params -> VOID
Rule 20    params -> empty
Rule 21    params_l -> params_l COMA param
Rule 22    params_l -> param
Rule 23    param -> type ID
Rule 24    type -> INT
Rule 25    type -> FLOAT
Rule 26    type -> CHAR
Rule 27    expression -> ID ASSIGN simple_expression
Rule 28    expression -> simple_expression
Rule 29    expression_stmt -> expression PUNTOCOMA
Rule 30    expression_stmt -> PUNTOCOMA
Rule 31    compound_stmt -> BLOCK_START local_instructions BLOCK_END
Rule 32    local_instructions -> local_instructions type var_declaration PUNTOCOMA
Rule 33    local_instructions -> local_instructions statement
Rule 34    local_instructions -> empty
Rule 35    statement -> expression_stmt
Rule 36    statement -> compound_stmt
Rule 37    statement -> if_stmt
Rule 38    statement -> while_stmt
Rule 39    statement -> do_while_stmt
Rule 40    statement -> return_stmt
Rule 41    statement -> lectura_stm
Rule 42    statement -> escritura_stm
Rule 43    return_stmt -> RETURN PUNTOCOMA
Rule 44    return_stmt -> RETURN expression PUNTOCOMA
Rule 45    if_stmt -> IF LPAREN condition RPAREN statement
Rule 46    if_stmt -> IF LPAREN condition RPAREN statement ELSE statement
Rule 47    while_stmt -> WHILE LPAREN condition RPAREN statement
Rule 48    do_while_stmt -> DO statement
Rule 49    condition -> NEGATION simple_expression
Rule 50    condition -> condition LOGIC_OP simple_expression
Rule 51    condition -> simple_expression
Rule 52    simple_expression -> simple_expression RELATION_OP bit_operation
Rule 53    simple_expression -> bit_operation
Rule 54    bit_operation -> bit_operation BIT_OP additive_operation
Rule 55    bit_operation -> additive_operation
Rule 56    additive_operation -> additive_operation ARITMETIC_OP_ADD prod_operation
Rule 57    additive_operation -> prod_operation
Rule 58    prod_operation -> prod_operation ARITMETIC_OP_PROD factor
Rule 59    prod_operation -> factor
Rule 60    factor -> LPAREN simple_expression RPAREN
Rule 61    factor -> call
Rule 62    factor -> ID
Rule 63    factor -> NUMBER
Rule 64    factor -> CHARACTER
Rule 65    escritura_stm -> ESCRITURA LPAREN STRING COMA var_multiple RPAREN PUNTOCOMA
Rule 66    escritura_stm -> ESCRITURA LPAREN STRING RPAREN PUNTOCOMA statement
Rule 67    lectura_stm -> LECTURA LPAREN COMILLA_DOBLE modificadores COMILLA_DOBLE COMA var_multiple RPAREN PUNTOCOMA statement
Rule 68    var_multiple -> ID
Rule 69    var_multiple -> ID COMA var_multiple
Rule 70    modificadores -> MODIFICADOR
Rule 71    modificadores -> MODIFICADOR modificadores
Rule 72    call -> ID LPAREN args RPAREN
Rule 73    args -> args_l
Rule 74    args -> empty
Rule 75    args_l -> args_l COMA simple_expression
Rule 76    args_l -> simple_expression

Terminals, with rules where they appear

ARITMETIC_OP_ADD     : 56
ARITMETIC_OP_PROD    : 58
ASSIGN               : 15 27
BIT_OP               : 54
BLOCK_END            : 31
BLOCK_START          : 31
CHAR                 : 26
CHARACTER            : 64
COMA                 : 12 21 65 67 69 75
COMILLA_DOBLE        : 67 67
DEFINE               : 7
DO                   : 48
ELSE                 : 46
ESCRITURA            : 65 66
FLOAT                : 25
FOR                  : 
HASH                 : 6 7
ID                   : 7 14 15 16 17 23 27 62 68 69 72
IF                   : 45 46
INCLUDE              : 6
INT                  : 24
LECTURA              : 67
LOGIC_OP             : 50
LPAREN               : 16 17 45 46 47 60 65 66 67 72
MINUSMINUS           : 
MODIFICADOR          : 70 71
NEGATION             : 49
NUMBER               : 63
PLUSPLUS             : 
PUNTOCOMA            : 10 29 30 32 43 44 65 66 67
RELATION_OP          : 52
RETURN               : 43 44
RPAREN               : 16 17 45 46 47 60 65 66 67 72
STRING               : 6 65 66
VOID                 : 17 19
WHILE                : 47
error                : 

Nonterminals, with rules where they appear

additive_operation   : 54 55 56
args                 : 72
args_l               : 73 75
bit_operation        : 52 53 54
call                 : 61
compound_stmt        : 16 17 36
condition            : 45 46 47 50
declaration          : 8 9
declaration_l        : 1 8
do_while_stmt        : 39
empty                : 5 20 34 74
escritura_stm        : 42
expression           : 29 44
expression_stmt      : 35
factor               : 58 59
fun_declaration      : 11
if_stmt              : 37
include_directive    : 3 4
include_directives   : 1 3
lectura_stm          : 41
local_instructions   : 31 32 33
modificadores        : 67 71
param                : 21 22
params               : 16 17
params_l             : 18 21
prod_operation       : 56 57 58
program              : 0
return_stmt          : 40
simple_expression    : 7 15 27 28 49 50 51 52 60 75 76
statement            : 33 45 46 46 47 48 66 67
type                 : 10 16 23 32
var_declaration      : 10 12 32
var_definition       : 12 13
var_multiple         : 65 67 69
while_stmt           : 38

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . include_directives declaration_l
    (3) include_directives -> . include_directives include_directive
    (4) include_directives -> . include_directive
    (5) include_directives -> . empty
    (6) include_directive -> . HASH INCLUDE STRING
    (7) include_directive -> . HASH DEFINE ID simple_expression
    (2) empty -> .

  ! shift/reduce conflict for HASH resolved as shift
    HASH            shift and go to state 5
    INT             reduce using rule 2 (empty -> .)
    FLOAT           reduce using rule 2 (empty -> .)
    CHAR            reduce using rule 2 (empty -> .)
    VOID            reduce using rule 2 (empty -> .)

  ! HASH            [ reduce using rule 2 (empty -> .) ]

    program                        shift and go to state 1
    include_directives             shift and go to state 2
    include_directive              shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> include_directives . declaration_l
    (3) include_directives -> include_directives . include_directive
    (8) declaration_l -> . declaration_l declaration
    (9) declaration_l -> . declaration
    (6) include_directive -> . HASH INCLUDE STRING
    (7) include_directive -> . HASH DEFINE ID simple_expression
    (10) declaration -> . type var_declaration PUNTOCOMA
    (11) declaration -> . fun_declaration
    (24) type -> . INT
    (25) type -> . FLOAT
    (26) type -> . CHAR
    (16) fun_declaration -> . type ID LPAREN params RPAREN compound_stmt
    (17) fun_declaration -> . VOID ID LPAREN params RPAREN compound_stmt

    HASH            shift and go to state 5
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 13
    VOID            shift and go to state 14

    declaration_l                  shift and go to state 6
    include_directive              shift and go to state 7
    declaration                    shift and go to state 8
    type                           shift and go to state 9
    fun_declaration                shift and go to state 10

state 3

    (4) include_directives -> include_directive .

    HASH            reduce using rule 4 (include_directives -> include_directive .)
    INT             reduce using rule 4 (include_directives -> include_directive .)
    FLOAT           reduce using rule 4 (include_directives -> include_directive .)
    CHAR            reduce using rule 4 (include_directives -> include_directive .)
    VOID            reduce using rule 4 (include_directives -> include_directive .)


state 4

    (5) include_directives -> empty .

    HASH            reduce using rule 5 (include_directives -> empty .)
    INT             reduce using rule 5 (include_directives -> empty .)
    FLOAT           reduce using rule 5 (include_directives -> empty .)
    CHAR            reduce using rule 5 (include_directives -> empty .)
    VOID            reduce using rule 5 (include_directives -> empty .)


state 5

    (6) include_directive -> HASH . INCLUDE STRING
    (7) include_directive -> HASH . DEFINE ID simple_expression

    INCLUDE         shift and go to state 15
    DEFINE          shift and go to state 16


state 6

    (1) program -> include_directives declaration_l .
    (8) declaration_l -> declaration_l . declaration
    (10) declaration -> . type var_declaration PUNTOCOMA
    (11) declaration -> . fun_declaration
    (24) type -> . INT
    (25) type -> . FLOAT
    (26) type -> . CHAR
    (16) fun_declaration -> . type ID LPAREN params RPAREN compound_stmt
    (17) fun_declaration -> . VOID ID LPAREN params RPAREN compound_stmt

    $end            reduce using rule 1 (program -> include_directives declaration_l .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 13
    VOID            shift and go to state 14

    declaration                    shift and go to state 17
    type                           shift and go to state 9
    fun_declaration                shift and go to state 10

state 7

    (3) include_directives -> include_directives include_directive .

    HASH            reduce using rule 3 (include_directives -> include_directives include_directive .)
    INT             reduce using rule 3 (include_directives -> include_directives include_directive .)
    FLOAT           reduce using rule 3 (include_directives -> include_directives include_directive .)
    CHAR            reduce using rule 3 (include_directives -> include_directives include_directive .)
    VOID            reduce using rule 3 (include_directives -> include_directives include_directive .)


state 8

    (9) declaration_l -> declaration .

    INT             reduce using rule 9 (declaration_l -> declaration .)
    FLOAT           reduce using rule 9 (declaration_l -> declaration .)
    CHAR            reduce using rule 9 (declaration_l -> declaration .)
    VOID            reduce using rule 9 (declaration_l -> declaration .)
    $end            reduce using rule 9 (declaration_l -> declaration .)


state 9

    (10) declaration -> type . var_declaration PUNTOCOMA
    (16) fun_declaration -> type . ID LPAREN params RPAREN compound_stmt
    (12) var_declaration -> . var_declaration COMA var_definition
    (13) var_declaration -> . var_definition
    (14) var_definition -> . ID
    (15) var_definition -> . ID ASSIGN simple_expression

    ID              shift and go to state 19

    var_declaration                shift and go to state 18
    var_definition                 shift and go to state 20

state 10

    (11) declaration -> fun_declaration .

    INT             reduce using rule 11 (declaration -> fun_declaration .)
    FLOAT           reduce using rule 11 (declaration -> fun_declaration .)
    CHAR            reduce using rule 11 (declaration -> fun_declaration .)
    VOID            reduce using rule 11 (declaration -> fun_declaration .)
    $end            reduce using rule 11 (declaration -> fun_declaration .)


state 11

    (24) type -> INT .

    ID              reduce using rule 24 (type -> INT .)


state 12

    (25) type -> FLOAT .

    ID              reduce using rule 25 (type -> FLOAT .)


state 13

    (26) type -> CHAR .

    ID              reduce using rule 26 (type -> CHAR .)


state 14

    (17) fun_declaration -> VOID . ID LPAREN params RPAREN compound_stmt

    ID              shift and go to state 21


state 15

    (6) include_directive -> HASH INCLUDE . STRING

    STRING          shift and go to state 22


state 16

    (7) include_directive -> HASH DEFINE . ID simple_expression

    ID              shift and go to state 23


state 17

    (8) declaration_l -> declaration_l declaration .

    INT             reduce using rule 8 (declaration_l -> declaration_l declaration .)
    FLOAT           reduce using rule 8 (declaration_l -> declaration_l declaration .)
    CHAR            reduce using rule 8 (declaration_l -> declaration_l declaration .)
    VOID            reduce using rule 8 (declaration_l -> declaration_l declaration .)
    $end            reduce using rule 8 (declaration_l -> declaration_l declaration .)


state 18

    (10) declaration -> type var_declaration . PUNTOCOMA
    (12) var_declaration -> var_declaration . COMA var_definition

    PUNTOCOMA       shift and go to state 24
    COMA            shift and go to state 25


state 19

    (16) fun_declaration -> type ID . LPAREN params RPAREN compound_stmt
    (14) var_definition -> ID .
    (15) var_definition -> ID . ASSIGN simple_expression

    LPAREN          shift and go to state 26
    PUNTOCOMA       reduce using rule 14 (var_definition -> ID .)
    COMA            reduce using rule 14 (var_definition -> ID .)
    ASSIGN          shift and go to state 27


state 20

    (13) var_declaration -> var_definition .

    PUNTOCOMA       reduce using rule 13 (var_declaration -> var_definition .)
    COMA            reduce using rule 13 (var_declaration -> var_definition .)


state 21

    (17) fun_declaration -> VOID ID . LPAREN params RPAREN compound_stmt

    LPAREN          shift and go to state 28


state 22

    (6) include_directive -> HASH INCLUDE STRING .

    HASH            reduce using rule 6 (include_directive -> HASH INCLUDE STRING .)
    INT             reduce using rule 6 (include_directive -> HASH INCLUDE STRING .)
    FLOAT           reduce using rule 6 (include_directive -> HASH INCLUDE STRING .)
    CHAR            reduce using rule 6 (include_directive -> HASH INCLUDE STRING .)
    VOID            reduce using rule 6 (include_directive -> HASH INCLUDE STRING .)


state 23

    (7) include_directive -> HASH DEFINE ID . simple_expression
    (52) simple_expression -> . simple_expression RELATION_OP bit_operation
    (53) simple_expression -> . bit_operation
    (54) bit_operation -> . bit_operation BIT_OP additive_operation
    (55) bit_operation -> . additive_operation
    (56) additive_operation -> . additive_operation ARITMETIC_OP_ADD prod_operation
    (57) additive_operation -> . prod_operation
    (58) prod_operation -> . prod_operation ARITMETIC_OP_PROD factor
    (59) prod_operation -> . factor
    (60) factor -> . LPAREN simple_expression RPAREN
    (61) factor -> . call
    (62) factor -> . ID
    (63) factor -> . NUMBER
    (64) factor -> . CHARACTER
    (72) call -> . ID LPAREN args RPAREN

    LPAREN          shift and go to state 35
    ID              shift and go to state 29
    NUMBER          shift and go to state 37
    CHARACTER       shift and go to state 38

    simple_expression              shift and go to state 30
    bit_operation                  shift and go to state 31
    additive_operation             shift and go to state 32
    prod_operation                 shift and go to state 33
    factor                         shift and go to state 34
    call                           shift and go to state 36

state 24

    (10) declaration -> type var_declaration PUNTOCOMA .

    INT             reduce using rule 10 (declaration -> type var_declaration PUNTOCOMA .)
    FLOAT           reduce using rule 10 (declaration -> type var_declaration PUNTOCOMA .)
    CHAR            reduce using rule 10 (declaration -> type var_declaration PUNTOCOMA .)
    VOID            reduce using rule 10 (declaration -> type var_declaration PUNTOCOMA .)
    $end            reduce using rule 10 (declaration -> type var_declaration PUNTOCOMA .)


state 25

    (12) var_declaration -> var_declaration COMA . var_definition
    (14) var_definition -> . ID
    (15) var_definition -> . ID ASSIGN simple_expression

    ID              shift and go to state 40

    var_definition                 shift and go to state 39

state 26

    (16) fun_declaration -> type ID LPAREN . params RPAREN compound_stmt
    (18) params -> . params_l
    (19) params -> . VOID
    (20) params -> . empty
    (21) params_l -> . params_l COMA param
    (22) params_l -> . param
    (2) empty -> .
    (23) param -> . type ID
    (24) type -> . INT
    (25) type -> . FLOAT
    (26) type -> . CHAR

    VOID            shift and go to state 44
    RPAREN          reduce using rule 2 (empty -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 13

    type                           shift and go to state 41
    params                         shift and go to state 42
    params_l                       shift and go to state 43
    empty                          shift and go to state 45
    param                          shift and go to state 46

state 27

    (15) var_definition -> ID ASSIGN . simple_expression
    (52) simple_expression -> . simple_expression RELATION_OP bit_operation
    (53) simple_expression -> . bit_operation
    (54) bit_operation -> . bit_operation BIT_OP additive_operation
    (55) bit_operation -> . additive_operation
    (56) additive_operation -> . additive_operation ARITMETIC_OP_ADD prod_operation
    (57) additive_operation -> . prod_operation
    (58) prod_operation -> . prod_operation ARITMETIC_OP_PROD factor
    (59) prod_operation -> . factor
    (60) factor -> . LPAREN simple_expression RPAREN
    (61) factor -> . call
    (62) factor -> . ID
    (63) factor -> . NUMBER
    (64) factor -> . CHARACTER
    (72) call -> . ID LPAREN args RPAREN

    LPAREN          shift and go to state 35
    ID              shift and go to state 29
    NUMBER          shift and go to state 37
    CHARACTER       shift and go to state 38

    simple_expression              shift and go to state 47
    bit_operation                  shift and go to state 31
    additive_operation             shift and go to state 32
    prod_operation                 shift and go to state 33
    factor                         shift and go to state 34
    call                           shift and go to state 36

state 28

    (17) fun_declaration -> VOID ID LPAREN . params RPAREN compound_stmt
    (18) params -> . params_l
    (19) params -> . VOID
    (20) params -> . empty
    (21) params_l -> . params_l COMA param
    (22) params_l -> . param
    (2) empty -> .
    (23) param -> . type ID
    (24) type -> . INT
    (25) type -> . FLOAT
    (26) type -> . CHAR

    VOID            shift and go to state 44
    RPAREN          reduce using rule 2 (empty -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 13

    params                         shift and go to state 48
    params_l                       shift and go to state 43
    empty                          shift and go to state 45
    param                          shift and go to state 46
    type                           shift and go to state 41

state 29

    (62) factor -> ID .
    (72) call -> ID . LPAREN args RPAREN

    ARITMETIC_OP_PROD reduce using rule 62 (factor -> ID .)
    ARITMETIC_OP_ADD reduce using rule 62 (factor -> ID .)
    BIT_OP          reduce using rule 62 (factor -> ID .)
    RELATION_OP     reduce using rule 62 (factor -> ID .)
    HASH            reduce using rule 62 (factor -> ID .)
    INT             reduce using rule 62 (factor -> ID .)
    FLOAT           reduce using rule 62 (factor -> ID .)
    CHAR            reduce using rule 62 (factor -> ID .)
    VOID            reduce using rule 62 (factor -> ID .)
    PUNTOCOMA       reduce using rule 62 (factor -> ID .)
    COMA            reduce using rule 62 (factor -> ID .)
    RPAREN          reduce using rule 62 (factor -> ID .)
    LOGIC_OP        reduce using rule 62 (factor -> ID .)
    LPAREN          shift and go to state 49


state 30

    (7) include_directive -> HASH DEFINE ID simple_expression .
    (52) simple_expression -> simple_expression . RELATION_OP bit_operation

    HASH            reduce using rule 7 (include_directive -> HASH DEFINE ID simple_expression .)
    INT             reduce using rule 7 (include_directive -> HASH DEFINE ID simple_expression .)
    FLOAT           reduce using rule 7 (include_directive -> HASH DEFINE ID simple_expression .)
    CHAR            reduce using rule 7 (include_directive -> HASH DEFINE ID simple_expression .)
    VOID            reduce using rule 7 (include_directive -> HASH DEFINE ID simple_expression .)
    RELATION_OP     shift and go to state 50


state 31

    (53) simple_expression -> bit_operation .
    (54) bit_operation -> bit_operation . BIT_OP additive_operation

    RELATION_OP     reduce using rule 53 (simple_expression -> bit_operation .)
    HASH            reduce using rule 53 (simple_expression -> bit_operation .)
    INT             reduce using rule 53 (simple_expression -> bit_operation .)
    FLOAT           reduce using rule 53 (simple_expression -> bit_operation .)
    CHAR            reduce using rule 53 (simple_expression -> bit_operation .)
    VOID            reduce using rule 53 (simple_expression -> bit_operation .)
    PUNTOCOMA       reduce using rule 53 (simple_expression -> bit_operation .)
    COMA            reduce using rule 53 (simple_expression -> bit_operation .)
    RPAREN          reduce using rule 53 (simple_expression -> bit_operation .)
    LOGIC_OP        reduce using rule 53 (simple_expression -> bit_operation .)
    BIT_OP          shift and go to state 51


state 32

    (55) bit_operation -> additive_operation .
    (56) additive_operation -> additive_operation . ARITMETIC_OP_ADD prod_operation

    BIT_OP          reduce using rule 55 (bit_operation -> additive_operation .)
    RELATION_OP     reduce using rule 55 (bit_operation -> additive_operation .)
    HASH            reduce using rule 55 (bit_operation -> additive_operation .)
    INT             reduce using rule 55 (bit_operation -> additive_operation .)
    FLOAT           reduce using rule 55 (bit_operation -> additive_operation .)
    CHAR            reduce using rule 55 (bit_operation -> additive_operation .)
    VOID            reduce using rule 55 (bit_operation -> additive_operation .)
    PUNTOCOMA       reduce using rule 55 (bit_operation -> additive_operation .)
    COMA            reduce using rule 55 (bit_operation -> additive_operation .)
    RPAREN          reduce using rule 55 (bit_operation -> additive_operation .)
    LOGIC_OP        reduce using rule 55 (bit_operation -> additive_operation .)
    ARITMETIC_OP_ADD shift and go to state 52


state 33

    (57) additive_operation -> prod_operation .
    (58) prod_operation -> prod_operation . ARITMETIC_OP_PROD factor

    ARITMETIC_OP_ADD reduce using rule 57 (additive_operation -> prod_operation .)
    BIT_OP          reduce using rule 57 (additive_operation -> prod_operation .)
    RELATION_OP     reduce using rule 57 (additive_operation -> prod_operation .)
    HASH            reduce using rule 57 (additive_operation -> prod_operation .)
    INT             reduce using rule 57 (additive_operation -> prod_operation .)
    FLOAT           reduce using rule 57 (additive_operation -> prod_operation .)
    CHAR            reduce using rule 57 (additive_operation -> prod_operation .)
    VOID            reduce using rule 57 (additive_operation -> prod_operation .)
    PUNTOCOMA       reduce using rule 57 (additive_operation -> prod_operation .)
    COMA            reduce using rule 57 (additive_operation -> prod_operation .)
    RPAREN          reduce using rule 57 (additive_operation -> prod_operation .)
    LOGIC_OP        reduce using rule 57 (additive_operation -> prod_operation .)
    ARITMETIC_OP_PROD shift and go to state 53


state 34

    (59) prod_operation -> factor .

    ARITMETIC_OP_PROD reduce using rule 59 (prod_operation -> factor .)
    ARITMETIC_OP_ADD reduce using rule 59 (prod_operation -> factor .)
    BIT_OP          reduce using rule 59 (prod_operation -> factor .)
    RELATION_OP     reduce using rule 59 (prod_operation -> factor .)
    HASH            reduce using rule 59 (prod_operation -> factor .)
    INT             reduce using rule 59 (prod_operation -> factor .)
    FLOAT           reduce using rule 59 (prod_operation -> factor .)
    CHAR            reduce using rule 59 (prod_operation -> factor .)
    VOID            reduce using rule 59 (prod_operation -> factor .)
    PUNTOCOMA       reduce using rule 59 (prod_operation -> factor .)
    COMA            reduce using rule 59 (prod_operation -> factor .)
    RPAREN          reduce using rule 59 (prod_operation -> factor .)
    LOGIC_OP        reduce using rule 59 (prod_operation -> factor .)


state 35

    (60) factor -> LPAREN . simple_expression RPAREN
    (52) simple_expression -> . simple_expression RELATION_OP bit_operation
    (53) simple_expression -> . bit_operation
    (54) bit_operation -> . bit_operation BIT_OP additive_operation
    (55) bit_operation -> . additive_operation
    (56) additive_operation -> . additive_operation ARITMETIC_OP_ADD prod_operation
    (57) additive_operation -> . prod_operation
    (58) prod_operation -> . prod_operation ARITMETIC_OP_PROD factor
    (59) prod_operation -> . factor
    (60) factor -> . LPAREN simple_expression RPAREN
    (61) factor -> . call
    (62) factor -> . ID
    (63) factor -> . NUMBER
    (64) factor -> . CHARACTER
    (72) call -> . ID LPAREN args RPAREN

    LPAREN          shift and go to state 35
    ID              shift and go to state 29
    NUMBER          shift and go to state 37
    CHARACTER       shift and go to state 38

    simple_expression              shift and go to state 54
    bit_operation                  shift and go to state 31
    additive_operation             shift and go to state 32
    prod_operation                 shift and go to state 33
    factor                         shift and go to state 34
    call                           shift and go to state 36

state 36

    (61) factor -> call .

    ARITMETIC_OP_PROD reduce using rule 61 (factor -> call .)
    ARITMETIC_OP_ADD reduce using rule 61 (factor -> call .)
    BIT_OP          reduce using rule 61 (factor -> call .)
    RELATION_OP     reduce using rule 61 (factor -> call .)
    HASH            reduce using rule 61 (factor -> call .)
    INT             reduce using rule 61 (factor -> call .)
    FLOAT           reduce using rule 61 (factor -> call .)
    CHAR            reduce using rule 61 (factor -> call .)
    VOID            reduce using rule 61 (factor -> call .)
    PUNTOCOMA       reduce using rule 61 (factor -> call .)
    COMA            reduce using rule 61 (factor -> call .)
    RPAREN          reduce using rule 61 (factor -> call .)
    LOGIC_OP        reduce using rule 61 (factor -> call .)


state 37

    (63) factor -> NUMBER .

    ARITMETIC_OP_PROD reduce using rule 63 (factor -> NUMBER .)
    ARITMETIC_OP_ADD reduce using rule 63 (factor -> NUMBER .)
    BIT_OP          reduce using rule 63 (factor -> NUMBER .)
    RELATION_OP     reduce using rule 63 (factor -> NUMBER .)
    HASH            reduce using rule 63 (factor -> NUMBER .)
    INT             reduce using rule 63 (factor -> NUMBER .)
    FLOAT           reduce using rule 63 (factor -> NUMBER .)
    CHAR            reduce using rule 63 (factor -> NUMBER .)
    VOID            reduce using rule 63 (factor -> NUMBER .)
    PUNTOCOMA       reduce using rule 63 (factor -> NUMBER .)
    COMA            reduce using rule 63 (factor -> NUMBER .)
    RPAREN          reduce using rule 63 (factor -> NUMBER .)
    LOGIC_OP        reduce using rule 63 (factor -> NUMBER .)


state 38

    (64) factor -> CHARACTER .

    ARITMETIC_OP_PROD reduce using rule 64 (factor -> CHARACTER .)
    ARITMETIC_OP_ADD reduce using rule 64 (factor -> CHARACTER .)
    BIT_OP          reduce using rule 64 (factor -> CHARACTER .)
    RELATION_OP     reduce using rule 64 (factor -> CHARACTER .)
    HASH            reduce using rule 64 (factor -> CHARACTER .)
    INT             reduce using rule 64 (factor -> CHARACTER .)
    FLOAT           reduce using rule 64 (factor -> CHARACTER .)
    CHAR            reduce using rule 64 (factor -> CHARACTER .)
    VOID            reduce using rule 64 (factor -> CHARACTER .)
    PUNTOCOMA       reduce using rule 64 (factor -> CHARACTER .)
    COMA            reduce using rule 64 (factor -> CHARACTER .)
    RPAREN          reduce using rule 64 (factor -> CHARACTER .)
    LOGIC_OP        reduce using rule 64 (factor -> CHARACTER .)


state 39

    (12) var_declaration -> var_declaration COMA var_definition .

    PUNTOCOMA       reduce using rule 12 (var_declaration -> var_declaration COMA var_definition .)
    COMA            reduce using rule 12 (var_declaration -> var_declaration COMA var_definition .)


state 40

    (14) var_definition -> ID .
    (15) var_definition -> ID . ASSIGN simple_expression

    PUNTOCOMA       reduce using rule 14 (var_definition -> ID .)
    COMA            reduce using rule 14 (var_definition -> ID .)
    ASSIGN          shift and go to state 27


state 41

    (23) param -> type . ID

    ID              shift and go to state 55


state 42

    (16) fun_declaration -> type ID LPAREN params . RPAREN compound_stmt

    RPAREN          shift and go to state 56


state 43

    (18) params -> params_l .
    (21) params_l -> params_l . COMA param

    RPAREN          reduce using rule 18 (params -> params_l .)
    COMA            shift and go to state 57


state 44

    (19) params -> VOID .

    RPAREN          reduce using rule 19 (params -> VOID .)


state 45

    (20) params -> empty .

    RPAREN          reduce using rule 20 (params -> empty .)


state 46

    (22) params_l -> param .

    COMA            reduce using rule 22 (params_l -> param .)
    RPAREN          reduce using rule 22 (params_l -> param .)


state 47

    (15) var_definition -> ID ASSIGN simple_expression .
    (52) simple_expression -> simple_expression . RELATION_OP bit_operation

    PUNTOCOMA       reduce using rule 15 (var_definition -> ID ASSIGN simple_expression .)
